# ghidra

./: .gitignore  build.gradle  settings.gradle
Ghidra/Framework/Generic/src/main/java/ghidra/framework/: Platform.java
Ghidra/Framework/Utility/src/main/java/ghidra/framework/: OperatingSystem.java
GhidraAndroid/: README.md  build.gradle  build.sh  proguard-rules.pro  settings.gradle
GhidraAndroid/src/main/: AndroidManifest.xml
GhidraAndroid/src/main/aidl/ghidra/android/: IGhidraAnalysisService.aidl
GhidraAndroid/src/main/cpp/: CMakeLists.txt  ghidra_jni_bridge.cpp
GhidraAndroid/src/main/java/ghidra/android/: BinaryInfoActivity.java  DecompilerViewActivity.java  GhidraAnalysisService.java  GhidraAndroidActivity.java  ProjectDashboardActivity.java
GhidraAndroid/src/main/res/layout/: activity_binary_info.xml  activity_decompiler_view.xml  activity_ghidra_android.xml  activity_project_dashboard.xml
GhidraAndroid/src/main/res/menu/: menu_project_context.xml
GhidraAndroid/src/main/res/values/: strings.xml  themes.xml
GhidraAndroid/src/test/java/ghidra/android/: BinaryInfoActivityTest.java  DecompilerViewActivityTest.java  GhidraAnalysisServiceTest.java
gradle/support/: fetchDependencies.gradle
